fixed the player showing on mobile, and removed the loading of video from mobile

--- a/static/style.css
+++ b/static/style.css
@@ -99,13 +99,13 @@ input[type="radio"]{display: none;}
 @media (max-width: 1000px) {
 	#controls{display:none;}
     body{background-color: #2F2F2F;}
-    .bgimage{display: none;}
+    .bgimage{background-image: url(bg5.jpg);}
     #player{width: 100%; height:45%; margin-bottom: 20px; box-shadow: none;}
     .playlist{width: 100%;}
     .lresult{font-size: 40px; height: 90px; font-size: 50px;}
     .votes{float: right; background-color: rgba(0,0,0,0.9); margin-top: -1.5em;font-size: 42px; padding-right: 8px; height: 89px; line-height: 89px; padding-left: 20px; border-radius: 1px;}
     .lthumb{height: 90px; box-shadow: none; }
-    .ltitle{height: 70px; color: #000;}
+    .ltitle{height: 70px; /*color: #000;*/}
     #plus,#minus{padding-left: 24px; margin-left: 0; padding-right: 24px;}
     #plus{border-right:solid 3px rgb(172, 172, 172);}
     #search{text-align: left; height: 100px; font-size: 40px; border: solid 2px #ccc;}
